# rust-ansi-term

./: CHANGELOG.md  Cargo.toml  README.md
ansi_format/: Cargo.toml
ansi_format/src/: lib.rs
ansi_generics_macro/: Cargo.toml
ansi_generics_macro/src/: lib.rs  parse_fmt_str.rs
examples/: 256_colors.rs  basic_colors.rs  format_args.rs  gradient_colors.rs  hyperlink.rs  nested_strings.rs  rgb_colors.rs  title.rs
examples/may_sleep/: mod.rs
src/: ansi.rs  ansi_args.rs  debug.rs  difference.rs  display.rs  gradient.rs  lib.rs  rgb.rs  style.rs  util.rs  utils.rs  write.rs
